# rune

./: Cargo.toml  RESTRUCTURE_PLAN.md  algorithm.md
algorithm_designs/: flow_of_information.md  upsert_operation.md
src/: datamodel.rs  lib.rs  main.rs  parser.rs  parser_commands.rs  rql.pest  saveandload.rs  terminal.rs
src/cli/: interface.rs
src/core/: error.rs  index.rs  mod.rs  storage.rs
src/query/: commands.rs  executor.rs  mod.rs  parser.rs  rql.pest
src/utils/: hasher.rs  mod.rs
tests/: parser_tests.rs
